[package]
name = "quick-srxd-modder"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"
strip = true
lto = true

[dependencies]
futures-util = "0.3.31"
indicatif = "0.17.11"
reqwest = { version = "0.12.15", features = ["stream"] }
rfd = "0.15.3"
tokio = { version = "1.44.1", features = ["full"] }
zip-extensions = "0.8.1"
